<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/toro"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".fragments.BitacoraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="330dp"
        android:layout_height="427dp"
        android:background="@drawable/ovalo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_titulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/registraroperacion"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:paddingTop="5sp"
                android:text="@string/fecha"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/et_fecha"
                    android:layout_width="104dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mesDiaAño"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageButton
                    android:id="@+id/ib_calendario2"
                    android:layout_width="162dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/ovalo3"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_paridad"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/paridad"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sp_divisa"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/style_spinner4"
                    android:entries="@array/lista_paridad" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_buySell"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/buySell"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sp_buySell"
                    android:layout_width="175dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="50sp"
                    android:layout_marginRight="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/style_spinner4"
                    android:entries="@array/lista_buy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_inversion"
                    android:layout_width="93dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inversion"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_inversion"
                    android:layout_width="171dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="42sp"
                    android:layout_marginRight="3sp"
                    android:layout_weight="1"
                    android:background="@drawable/ovalo3"
                    android:ems="10"
                    android:hint="@string/usd"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_rentabilidad"
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rentabilidad"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/et_rentabilidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="14sp"
                    android:layout_weight="1"
                    android:background="@drawable/ovalo3"
                    android:ems="10"
                    android:hint="@string/porcentaje"
                    android:inputType="number"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="32sp"
                android:layout_marginTop="10sp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_resultado"
                    android:layout_width="242dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resultado"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/sp_resultado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/style_spinner4"
                    android:entries="@array/lista_resultado" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/bt_resumen"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/ovalo2"
        android:text="@string/resumenBitacora"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/bt_capital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="4dp"
        android:background="@color/yellow"
        android:backgroundTint="@color/yellow"
        android:clickable="true"
        android:src="@drawable/ic_bitacora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <Button
        android:id="@+id/bt_guardar"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="430dp"
        android:background="@drawable/input_field"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/guardar"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>